--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "awesome-typescript-loader": "^0.15.9",
     "strip-sourcemap-loader": "0.0.1",
+    "tslint": "^3.2.1",
     "typescript": "^1.7.3"
   },
   "name": "spiders",
